--- a/estilos/estilo_index.css
+++ b/estilos/estilo_index.css
@@ -99,7 +99,6 @@ button:active {
 }
 
 
-
 /* ===== Responsividade ===== */
 @media(max-width:400px){
   .container-calculadora {
@@ -114,3 +113,25 @@ button:active {
     margin: 0 3px;
   }
 }
+
+/* ===================== Sistema Linear ===================== */
+.container-sistema {
+  display: inline-block; /* centraliza o conjunto de inputs */
+  text-align: center;
+}
+
+.linha-sistema {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px; /* espaço entre inputs e sinal de = */
+}
+
+.input-sistema {
+  width: 60px; /* deixa todos os inputs uniformes */
+  text-align: center;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
