--- a/estilos/estilo_index.css
+++ b/estilos/estilo_index.css
@@ -49,8 +49,10 @@ body {
 
 /* ===== Container das matrizes ===== */
 .container-matriz {
-  display: inline-block;
+  display: block;
   margin: 10px 0;
+  
+  
 }
 
 .linha-matriz {
@@ -103,41 +105,6 @@ button:active {
   box-shadow: 0 2px var(--cor-botao-sombra);
 }
 
-.display-calculadora {
-  width: 100%;
-  height: 50px;
-  background: var(--cor-display);
-  border-radius: 8px;
-  line-height: 50px;
-  font-size: 24px;
-  text-align: right;
-  padding: 0 10px;
-  color: var(--cor-borda-input);
-  box-sizing: border-box;
-  box-shadow: inset 0 2px 8px var(--cor-display);
-}
-
-/* Grade de botões */
-.botoes-calculadora {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
-}
-
-/* ===== Responsividade ===== */
-@media(max-width:400px){
-  .container-calculadora {
-    max-width: 90%;
-  }
-  .botoes-calculadora button {
-    padding: 12px 0;
-    font-size: 16px;
-  }
-  .input-matriz {
-    width: 50px;
-    margin: 0 3px;
-  }
-}
 
 /* ===== Sistema Linear ===== */
 .container-sistema {
@@ -169,6 +136,22 @@ button:active {
   box-shadow: inset 0 0 8px var(--cor-display);
 }
 
+
+
+/* Configurações */
 #configuracao_icone {
   height: 36px;
+}
+
+.botoes_configuracao {
+  width: 150px;
+}
+
+
+/* ===== Responsividade ===== */
+@media(max-width:400px){
+  .input-matriz {
+    width: 50px;
+    margin: 0 3px;
+  }
 }
